# bilbox-comfyui

./: .gitignore  LICENSE  README.md  __init__.py  bilbox_photo_prompt.py  bilbox_post_processing.py  luts_directory.txt  pyproject.toml  requirements.txt
luts/: put_luts_files_here.txt
reboot/: reboot.js
web/: bilbox.css  bilboxContextMenuEnhance.js  reboot.js
web/PromptGeek/: photo_data.json
web_to_copy/: bilbox.css  bilboxContextMenuEnhance.js
web_to_copy/PromptGeek/: photo_data.json
