[project]
name = "bilbox-comfyui"
description = "Nodes: BilboX's PromptGeek Photo Prompt. This provides a convenient way to compose photorealistic prompts into ComfyUI."
version = "1.0.0"
license = "LICENSE"
dependencies = ["colour-science>=0.4.3", "numpy>=1.19.0", "imageio>=2.31.0", "opencv-python>=4.8.1.78", "#scipy==1.4.1"]

[project.urls]
Repository = "https://github.com/syllebra/bilbox-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "bilbox-comfyui"
Icon = ""
